apps/client/test_output.txt

> client@0.0.0 test C:\projects\cerdas\apps\client
> vitest "run"


[1m[46m RUN [49m[22m [36mv4.0.17 [39m[90mC:/projects/cerdas/apps/client[39m

 [31mΓ¥»[39m tests/api.test.ts [2m([22m[2m3 tests[22m[2m | [22m[31m3 failed[39m[2m)[22m[32m 69[2mms[22m[39m
[31m     [31m├ù[31m should login successfully[39m[32m 64[2mms[22m[39m
[31m     [31m├ù[31m should fetch assignments[39m[32m 3[2mms[22m[39m
[31m     [31m├ù[31m should push responses[39m[32m 1[2mms[22m[39m

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ» Failed Tests 3 ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»

 FAIL  tests/api.test.ts > Backend API Integration Tests > should login successfully
SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON
ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[1/3]ΓÄ»

 FAIL  tests/api.test.ts > Backend API Integration Tests > should fetch assignments
AssertionError: expected '' to be truthy

- Expected: 
true

+ Received: 
""

 Γ¥» tests/api.test.ts:39:28
     37|     // 2. Data Flow
     38|     it('should fetch assignments', async () => {
     39|         expect(AUTH_TOKEN).toBeTruthy();
       |                            ^
     40|         
     41|         const res = await fetch(`${BASE_URL}/assignments`, {

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[2/3]ΓÄ»

 FAIL  tests/api.test.ts > Backend API Integration Tests > should push responses
AssertionError: expected '' to be truthy

- Expected: 
true

+ Received: 
""

 Γ¥» tests/api.test.ts:58:28
     56|     // 3. Sync Flow
     57|     it('should push responses', async () => {
     58|         expect(AUTH_TOKEN).toBeTruthy();
       |                            ^
     59|         
     60|         // Need a valid assignment ID first. 

ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»ΓÄ»[3/3]ΓÄ»


[2m Test Files [22m [1m[31m1 failed[39m[22m[90m (1)[39m
[2m      Tests [22m [1m[31m3 failed[39m[22m[90m (3)[39m
[2m   Start at [22m 01:20:06
[2m   Duration [22m 357ms[2m (transform 35ms, setup 0ms, import 89ms, tests 69ms, environment 0ms)[22m

ΓÇëELIFECYCLEΓÇë Test failed. See above for more details.
